fix sidebar collapse on smaller resolution

--- a/src/renderer/scss/MainRouteRenderer.scss
+++ b/src/renderer/scss/MainRouteRenderer.scss
@@ -120,6 +120,7 @@ $dock-height: 420px;
 .inner-sidebar {
     max-height: calc(100vh - 100px);
     overflow-y: scroll;
+    min-width: 200px;
 
     .inner-sidebar-wrap {
         display: flex;
